--- a/pageCreation/creationSession.html
+++ b/pageCreation/creationSession.html
@@ -20,7 +20,7 @@
     <script src="js/index.js"></script>
 </head>
 
-<body>
+<body class="px-0">
 <div id="menu"></div>
 
 <div class="container d-flex h-100">
@@ -69,8 +69,6 @@
         </div>
     </div>
 </div>
-
-
 
 <div id="pied"></div>
 
