--- a/pageCreation/creationSession.html
+++ b/pageCreation/creationSession.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" type="image/png" href="../img/logo.png">
 
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../css/webfonts/all.min.css">
+
     <link rel="stylesheet" href="../composant/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../composant/confirm/jquery-confirm.min.css">
-    <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="../composant/noty/animate.css">
+    <link rel="stylesheet" href="../composant/noty/noty.css">
+    <link rel="stylesheet" href="../composant/noty/sunset.css">
 
     <script src="../composant/jquery.js"></script>
+
     <script src="../composant/bootstrap/bootstrap.bundle.min.js"></script>
+
     <script src="../composant/confirm/jquery-confirm.min.js"></script>
+
     <script src="../composant/personnel/class.std.js"></script>
+
+    <script src="../composant/noty/noty.min.js"></script>
 
     <script src="js/index.js"></script>
 </head>
@@ -53,7 +62,7 @@
                             <select class="custom-select" id="question">
                                 <option selected>Quelle est votre deuxième prénom ?</option>
                                 <option selected>Quelle est votre couleur préférée ?</option>
-                                <option selected>Quelle est votre ville natale ?</option>
+                                <option selected>Quelle est votre le nom de votre ville natale ?</option>
                                 <option selected>Quelle est votre sport favoris ?</option>
                             </select>
                         </div>
